<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interview_cse"
    android:background="#f7e4d3">


    <TextView
        android:id="@+id/int1"
        android:layout_width="254dp"
        android:layout_height="29dp"
        android:layout_marginEnd="104dp"
        android:text="@string/int1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/int2"
        android:layout_width="254dp"
        android:layout_height="29dp"
        android:layout_marginEnd="104dp"
        android:text="@string/int2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/int3"
        android:layout_width="254dp"
        android:layout_height="29dp"
        android:layout_marginEnd="104dp"
        android:text="@string/int3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/int4"
        android:layout_width="254dp"
        android:layout_height="29dp"
        android:layout_marginEnd="104dp"
        android:text="@string/int4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/int5"
        android:layout_width="254dp"
        android:layout_height="29dp"
        android:layout_marginEnd="104dp"
        android:text="@string/int5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"/>
</androidx.constraintlayout.widget.ConstraintLayout>