<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".apti_cse"
    android:background="#f7e4d3">

    <TextView
        android:id="@+id/linktv1"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/hyperLink"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/linktv2"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/hyperLink1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/linktv3"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:text="@string/hyperLink2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/linktv4"
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:text="@string/hyperLink3"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/linktv5"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:text="@string/hyperLink4"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854"
        android:textColor="@color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>